--- a/package.json
+++ b/package.json
@@ -4,30 +4,17 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@babel/plugin-transform-class-properties": "^7.25.9",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.26.6",
-    "@babel/plugin-transform-numeric-separator": "^7.25.9",
-    "@babel/plugin-transform-optional-chaining": "^7.25.9",
-    "@babel/plugin-transform-private-methods": "^7.25.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/jest-dom": "^5.17.0",
-    "ajv": "^8.17.1",
-    "ajv-keywords": "^5.1.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
-    "dotenv": "^16.4.7",
-    "formik": "^2.4.6",
     "i18next": "^24.2.1",
-    "jotai": "^2.11.0",
     "js-cookie": "^3.0.5",
-    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
-    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-cookie": "^7.2.2",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
@@ -66,31 +53,22 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^14.6.0",
     "@types/chart.js": "^2.9.41",
-    "@types/eslint": "^9.6.1",
-    "@types/jest": "^29.5.14",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.14",
-    "@types/node": "^22.10.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
+    "depcheck": "^1.4.7",
     "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.2",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "prettier": "^3.4.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "typescript": "^5.7.3"
   }
 }
