--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
-    "@testing-library/jest-dom": "^5.17.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.9",
@@ -31,6 +30,7 @@
     "react-router-dom": "^7.1.1",
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
+    "vite": "^6.0.11",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
@@ -77,6 +77,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.8.4"
+    "typescript": "^5.7.3"
   }
 }
